// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maskBoxOutset renders 0 1`] = `
Array [
  .c0 {
  -webkit-mask-box-outset: 0;
  mask-box-outset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: 0;
  mask-box-outset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: 0;
  mask-box-outset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: 0;
  mask-box-outset: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxOutset renders function 1`] = `
Array [
  .c0 {
  -webkit-mask-box-outset: hasnot;
  mask-box-outset: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: has;
  mask-box-outset: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: hasnot;
  mask-box-outset: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: has;
  mask-box-outset: has;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxOutset renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-mask-box-outset: invalid.path.1;
  mask-box-outset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: invalid.path.1;
  mask-box-outset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: invalid.path.1;
  mask-box-outset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: invalid.path.1;
  mask-box-outset: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxOutset renders negative number 1`] = `
Array [
  .c0 {
  -webkit-mask-box-outset: -54881;
  mask-box-outset: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: -54881;
  mask-box-outset: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: -42365;
  mask-box-outset: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: -42365;
  mask-box-outset: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxOutset renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-mask-box-outset: July;
  mask-box-outset: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-outset: August;
    mask-box-outset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-outset: September;
    mask-box-outset: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-outset: November;
    mask-box-outset: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box-outset: August;
    mask-box-outset: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: July;
  mask-box-outset: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-outset: August;
    mask-box-outset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-outset: September;
    mask-box-outset: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-outset: November;
    mask-box-outset: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box-outset: August;
    mask-box-outset: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: January;
  mask-box-outset: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-outset: December;
    mask-box-outset: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-outset: April;
    mask-box-outset: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-outset: May;
    mask-box-outset: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box-outset: June;
    mask-box-outset: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: January;
  mask-box-outset: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-outset: December;
    mask-box-outset: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-outset: April;
    mask-box-outset: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-outset: May;
    mask-box-outset: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box-outset: June;
    mask-box-outset: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxOutset renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-outset: July;
    mask-box-outset: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-outset: August;
    mask-box-outset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-outset: September;
    mask-box-outset: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box-outset: November;
    mask-box-outset: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-outset: July;
    mask-box-outset: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-outset: August;
    mask-box-outset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-outset: September;
    mask-box-outset: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box-outset: November;
    mask-box-outset: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-outset: May;
    mask-box-outset: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-outset: June;
    mask-box-outset: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-outset: April;
    mask-box-outset: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box-outset: November;
    mask-box-outset: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-outset: May;
    mask-box-outset: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-outset: June;
    mask-box-outset: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-outset: April;
    mask-box-outset: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box-outset: November;
    mask-box-outset: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxOutset renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-mask-box-outset: July;
  mask-box-outset: July;
}

@media May {
  .c0 {
    -webkit-mask-box-outset: August;
    mask-box-outset: August;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-outset: September;
    mask-box-outset: September;
  }
}

@media January {
  .c0 {
    -webkit-mask-box-outset: November;
    mask-box-outset: November;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-outset: August;
    mask-box-outset: August;
  }
}

@media June {
  .c0 {
    -webkit-mask-box-outset: November;
    mask-box-outset: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: July;
  mask-box-outset: July;
}

@media May {
  .c0 {
    -webkit-mask-box-outset: August;
    mask-box-outset: August;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-outset: September;
    mask-box-outset: September;
  }
}

@media January {
  .c0 {
    -webkit-mask-box-outset: November;
    mask-box-outset: November;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-outset: August;
    mask-box-outset: August;
  }
}

@media June {
  .c0 {
    -webkit-mask-box-outset: November;
    mask-box-outset: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: April;
  mask-box-outset: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-box-outset: November;
    mask-box-outset: November;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-outset: January;
    mask-box-outset: January;
  }
}

@media January {
  .c0 {
    -webkit-mask-box-outset: December;
    mask-box-outset: December;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-outset: April;
    mask-box-outset: April;
  }
}

@media June {
  .c0 {
    -webkit-mask-box-outset: May;
    mask-box-outset: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: April;
  mask-box-outset: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-box-outset: November;
    mask-box-outset: November;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-outset: January;
    mask-box-outset: January;
  }
}

@media January {
  .c0 {
    -webkit-mask-box-outset: December;
    mask-box-outset: December;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-outset: April;
    mask-box-outset: April;
  }
}

@media June {
  .c0 {
    -webkit-mask-box-outset: May;
    mask-box-outset: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxOutset renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-mask-box-outset: July;
    mask-box-outset: July;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-outset: August;
    mask-box-outset: August;
  }
}

@media January {
  .c0 {
    -webkit-mask-box-outset: September;
    mask-box-outset: September;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-outset: November;
    mask-box-outset: November;
  }
}

@media June {
  .c0 {
    -webkit-mask-box-outset: August;
    mask-box-outset: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-mask-box-outset: July;
    mask-box-outset: July;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-outset: August;
    mask-box-outset: August;
  }
}

@media January {
  .c0 {
    -webkit-mask-box-outset: September;
    mask-box-outset: September;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-outset: November;
    mask-box-outset: November;
  }
}

@media June {
  .c0 {
    -webkit-mask-box-outset: August;
    mask-box-outset: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-box-outset: January;
    mask-box-outset: January;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-outset: December;
    mask-box-outset: December;
  }
}

@media January {
  .c0 {
    -webkit-mask-box-outset: April;
    mask-box-outset: April;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-outset: May;
    mask-box-outset: May;
  }
}

@media June {
  .c0 {
    -webkit-mask-box-outset: June;
    mask-box-outset: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-box-outset: January;
    mask-box-outset: January;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-outset: December;
    mask-box-outset: December;
  }
}

@media January {
  .c0 {
    -webkit-mask-box-outset: April;
    mask-box-outset: April;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-outset: May;
    mask-box-outset: May;
  }
}

@media June {
  .c0 {
    -webkit-mask-box-outset: June;
    mask-box-outset: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxOutset renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-mask-box-outset: 54881;
  mask-box-outset: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: 54881;
  mask-box-outset: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: 42365;
  mask-box-outset: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: 42365;
  mask-box-outset: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxOutset renders string 1`] = `
Array [
  .c0 {
  -webkit-mask-box-outset: July;
  mask-box-outset: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: July;
  mask-box-outset: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: June;
  mask-box-outset: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: June;
  mask-box-outset: June;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxOutset renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`maskBoxOutset renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-mask-box-outset: DarkSlateBlue;
  mask-box-outset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: DarkSlateBlue;
  mask-box-outset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: DarkSlateBlue;
  mask-box-outset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-outset: DarkSlateBlue;
  mask-box-outset: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
